Agregando  menú de contexto a CalculoDePropinas

--- a/ejercicios/CalculoDePropinas/CalculoDePropinas_3/res/values/strings.xml
+++ b/ejercicios/CalculoDePropinas/CalculoDePropinas_3/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="cantidadPersonas">Cantidad de Personas</string>
     <string name="calcular">Calcular</string>
     <string name="action_reset">Borrar valores</string>
+    <string name="limpiar">Limpiar</string>
 
 </resources>
