Migrate ejemplos/ActivityIntentos2

--- a/ejemplos/ActivityIntentos2/app/src/main/res/values/strings.xml
+++ b/ejemplos/ActivityIntentos2/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="web">Web</string>
     <string name="telefono">Teléfono</string>
+    <string name="sin_permiso">El usuario no dió permiso a hacer llamadas telefónicas</string>
 
 </resources>
